all done, missing links